# MAPIStubLibrary

./: .clang-format  .gitignore  CMakeLists.txt  build.bat
example/: ExampleMapiConsoleApp.cpp
